# net-prof

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
net-prof/: README.md  __init__.py  visualize.py
net-prof/data/: metrics_and_description.txt
net-prof/example/: after.txt  before.txt  usage_demo.py
net-prof/src/net_prof/: __init__.py  __main__.py  engine.py  visualize.py
net-prof/tests/: test_engine.py  test_visualize.py
src/net_prof/: __init__.py  engine.py  visualize.py
src/net_prof.egg-info/: PKG-INFO
src/net_prof/data/: grouping_rules.csv  groupings.csv  groupings.txt  groupings2.csv  groupings3.csv
tests/: after.json  aurora_test.py  before.json  compare.py  report.html  report_2.html  report_all.html  test.py  test_collect.py  test_dump.py  test_html.py  test_html_2.py  test_visualize.py
tools/manual/: collect_logs_script.sh
